# Dev-Janitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PERFORMANCE_OPTIMIZATION.md  README.md  README.zh-CN.md  ROADMAP.md  electron-builder.json5  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ai-catalog-audit.yml  ci.yml  release.yml
docs/: INFOGRAPHIC_PROMPT.md  RELEASES.md
scripts/: ai-cli-catalog.json  audit-ai-catalog.mjs  validate-release-artifacts.mjs  validate-release-version.mjs
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/ai_cleanup/: mod.rs
src-tauri/src/ai_cli/: mod.rs
src-tauri/src/ai_tools/: mod.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/chat_history/: mod.rs
src-tauri/src/commands/: ai_cleanup.rs  ai_cli.rs  cache.rs  chat_history.rs  config.rs  mod.rs  packages.rs  security.rs  services.rs  tools.rs
src-tauri/src/config/: mod.rs
src-tauri/src/detection/: mod.rs
src-tauri/src/package_manager/: cargo.rs  composer.rs  conda.rs  homebrew.rs  mod.rs  npm.rs  pip.rs  pnpm.rs  yarn.rs
src-tauri/src/security_scan/: definitions.rs  mod.rs  scanner.rs
src-tauri/src/services/: mod.rs
src-tauri/src/utils/: command.rs
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/shared/: ConfirmDialog.tsx
src/components/views/: AiCleanupView.tsx  AiCliView.tsx  CacheView.tsx  ChatHistoryView.tsx  ConfigView.tsx  PackagesView.tsx  SecurityScanView.tsx  ServicesView.tsx  SettingsView.tsx  ToolsView.tsx
src/hooks/: useAutoUpdater.ts
src/i18n/: en.json  zh.json
src/ipc/: commands.ts
src/main/: aiAssistant.ts  autoUpdater.ts  detectionEngine.test.ts  detectionEngine.ts  environmentScanner.test.ts  environmentScanner.ts  index.ts  ipcHandlers.ts  packageManager.ts  pathScanner.test.ts  pathScanner.ts  preload.ts  serviceMonitor.ts
src/main/security/: commandValidator.ts
src/renderer/components/: index.ts
src/renderer/components/AI/: AIAssistantDrawer.tsx
src/renderer/components/AICli/: AICLIView.tsx  index.ts
src/renderer/components/Environment/: EnvironmentView.tsx  PathAnalyzer.tsx
src/renderer/components/Layout/: AppLayout.tsx  Sidebar.tsx
src/renderer/components/Services/: ServiceTable.tsx
src/renderer/i18n/locales/: en-US.json  zh-CN.json
src/renderer/store/: index.ts
src/shared/types/: index.ts
src/store/: index.ts
src/styles/: index.css
