[package]
name = "dev-janitor-v2"
version = "2.5.0"
description = "Cross-platform desktop application for cleaning development artifacts and managing local developer tools"
authors = ["cocojojo5213"]
edition = "2021"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/cocojojo5213/Dev-Janitor"
homepage = "https://github.com/cocojojo5213/Dev-Janitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dev_janitor_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Keep the desktop shell opt-in for core-only checks and unit tests. The
# default remains the full application so local builds and release artifacts
# keep their existing behavior.
default = ["desktop"]
desktop = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-process",
    "dep:tauri-plugin-updater",
]

[build-dependencies]
tauri-build = { version = "2.6", features = [], optional = true }

[dependencies]
tauri = { version = "2.11", features = [], optional = true }
tauri-plugin-opener = { version = "^2.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System info & process monitoring
sysinfo = "0.39"

# File system operations
walkdir = "2"
glob = "0.3"

# Parallel processing
rayon = "1"

# Pattern matching
regex = "1"

# Command discovery
which = "8"

# Error handling
thiserror = "2"

# Hash generation
md5 = "0.8"

# Date/time formatting
chrono = "0.4"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-process = { version = "^2.3", optional = true }
tauri-plugin-updater = { version = "^2.10", optional = true }

[target."cfg(windows)".dependencies]
winreg = "0.56"

# ============ Release Profile Optimization ============
# These settings significantly reduce binary size

[profile.release]
# Updater needs the bundle marker symbol to stay in the binary.
strip = false
# Keep release linking parallel-friendly. Cross-crate LTO makes every GitHub
# platform build wait on one long serial link step without a useful size win.
lto = false
# Keep normal release optimizations while avoiding size-focused compilation.
opt-level = 2
# Keep several codegen units so release compilation can use all runner cores.
codegen-units = 16
# Abort on panic (smaller than unwinding)
panic = "abort"
